Closed Bug 1733011 Opened 3 years ago Closed 3 years ago

JSON string dump does not escape special characters for CacheIRHealthReport shape properties

Categories

(Core :: JavaScript Engine: JIT, defect, P3)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- wontfix
firefox93 --- wontfix
firefox94 --- fixed

People

(Reporter: caroline, Assigned: caroline)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This is an issue when lastProperty has, for example, a set of quotes in it. This is now invalid JSON.

Summary: JSON string dump does not escape special characters → JSON string dump does not escape special characters for CacheIRHealthReport shape properties

Set release status flags based on info from the regressing bug 1713009

Pushed by ccullen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5e9301463500
Fix JSON property strings with escape characters for CacheIRHealthReport. r=iain
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: