Bug 1733011 - Fix JSON property strings with escape characters for CacheIRHealthReport. r=iain

Differential Revision: https://phabricator.services.mozilla.com/D127143