js/src/jit/CacheIRSpewer.cpp
@@ -341,36 +341,6 @@ void CacheIRSpewer::beginCache(const IRGenerator& gen) {
   }
 }
 
-template <typename CharT>
-static void QuoteString(GenericPrinter& out, const CharT* s, size_t length) {
-  const CharT* end = s + length;
-  for (const CharT* t = s; t < end; s = ++t) {
-    // This quote implementation is probably correct,
-    // but uses \u even when not strictly necessary.
-    char16_t c = *t;
-    if (c == '"' || c == '\\') {
-      out.printf("\\");
-      out.printf("%c", char(c));
-    } else if (!IsAsciiPrintable(c)) {
-      out.printf("\\u%04x", c);
-    } else {
-      out.printf("%c", char(c));
-    }
-  }
-}
-
-static void QuoteString(GenericPrinter& out, JSLinearString* str) {
-  JS::AutoCheckCannotGC nogc;
-
-  // Limit the string length to reduce the JSON file size.
-  size_t length = std::min(str->length(), size_t(128));
-  if (str->hasLatin1Chars()) {
-    QuoteString(out, str->latin1Chars(nogc), length);
-  } else {
-    QuoteString(out, str->twoByteChars(nogc), length);
-  }
-}
-
 void CacheIRSpewer::valueProperty(const char* name, const Value& v) {
   MOZ_ASSERT(enabled());
   JSONPrinter& j = json_.ref();
@@ -390,9 +360,7 @@ void CacheIRSpewer::valueProperty(const char* name, const Value& v) {
   } else if (v.isString() || v.isSymbol()) {
     JSString* str = v.isString() ? v.toString() : v.toSymbol()->description();
     if (str && str->isLinear()) {
-      j.beginStringProperty("value");
-      QuoteString(output_, &str->asLinear());
-      j.endStringProperty();
+      j.property("value", &str->asLinear());
     }
   } else if (v.isObject()) {
     JSObject& object = v.toObject();
@@ -400,9 +368,7 @@ void CacheIRSpewer::valueProperty(const char* name, const Value& v) {
 
     if (object.is<JSFunction>()) {
       if (JSAtom* name = object.as<JSFunction>().displayAtom()) {
-        j.beginStringProperty("funName");
-        QuoteString(output_, name);
-        j.endStringProperty();
+        j.property("funName", name);
       }
     }
 
