js/src/vm/JSONPrinter.h
@@ -13,6 +13,7 @@
 
 #include "js/TypeDecls.h"
 #include "vm/Printer.h"
+#include "vm/StringType.h"
 
 namespace js {
 
@@ -41,6 +42,7 @@ class JSONPrinter {
 
   void boolProperty(const char* name, bool value);
 
+  void property(const char* name, JSLinearString* value);
   void property(const char* name, const char* value);
   void property(const char* name, int32_t value);
   void property(const char* name, uint32_t value);
